# jetski-ambiata

./: .gitignore  .gitmodules  README.md  Setup.hs  boris.toml  cabal  jetski.cabal  mafia  master.toml  project.cabal  project.submodules
src/: Jetski.hs
src/Jetski/: Hash.hs  OS.hs
src/Jetski/Foreign/: Argument.hs  Binding.hsc  Function.hs  Return.hs
test/: test.hs
test/Test/: Jetski.hs
test/Test/Jetski/: Arbitrary.hs
