name:                  jetski
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              jetski
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           jetski

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-exception
                     , bytestring                      == 0.10.*
                     , directory                       == 1.2.*
                     , either                          >= 4.3        && < 4.5
                     , exceptions                      >= 0.6        && < 0.9
                     , libffi                          == 0.1.*
                     , process                         == 1.2.*
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5
                     , unix                            == 2.7.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_jetski
                       Jetski
                       Jetski.OS

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , containers                      == 0.5.*
                     , disorder-core
                     , disorder-corpus
                     , either                          >= 4.3        && < 4.5
                     , jetski
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5
