name:                  ambiata-jetski
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              jetski
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           jetski

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-eithert
                     , bytestring                      == 0.10.*
                     , cryptonite                      == 0.15.*
                     , directory                       >= 1.2        && < 1.4
                     , exceptions                      >= 0.6        && < 0.9
                     , filepath                        == 1.4.*
                     , memory                          == 0.13.*
                     , process                         >= 1.2.3      && < 1.5
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6
                     , unix                            == 2.7.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Jetski
                       Jetski.Hash
                       Jetski.OS

                       Jetski.Foreign.Argument
                       Jetski.Foreign.Binding
                       Jetski.Foreign.Function
                       Jetski.Foreign.Return

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-x-eithert
                     , containers                      == 0.5.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6

test-suite test-dynamic
  -- Cabal < 1.24 doesn't build this properly, but there's no way to do a
  -- conditional based on the cabal version, the best we can do is use GHC as a
  -- proxy because we know that GHC 8.0 requires at least Cabal 1.24.
  if impl(ghc < 8.0)
    buildable:         False

  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -dynamic -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-x-eithert
                     , containers                      == 0.5.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6
